force-app/main/default/objects/Timecard__c/Timecard__c.object-meta.xml
<CustomObject>
    <label>Timecard</label>
    <nameField>
        <label>Timecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>