force-app/main/default/objects/Timecard__c/fields/TaskName__c.field-meta.xml
<CustomField>
    <fullName>TaskName__c</fullName>
    <label>TaskName</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Offshore Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>