force-app/main/default/objects/Timecard__c/fields/Timecard_Name__c.field-meta.xml
<CustomField>
    <fullName>Timecard_Name__c</fullName>
    <label>Timecard Name</label>
    <type>AutoNumber</type>
</CustomField>