force-app/main/default/objects/Timecard__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>